--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header class="header container">
           <div class="logo">
             <a href="/">
-              <svg class="logo" width="96" height="85">
+              <svg class="" width="96" height="85">
                 <use href="./images/icons.svg#icon-logo"></use>
               </svg>
             </a>
@@ -692,7 +692,7 @@
     <footer class="footer container">
       <div class="footer__wraper">
         <div class="footer__logo-box">
-          <svg class="logo" width="190" height="66">
+          <svg class="" width="190" height="66">
             <use href="./images/icons.svg#icon-footer-logo"></use>
           </svg>
           <p class="footer__logo-text">
@@ -738,7 +738,7 @@
             </li>
             <li class="footer__item">
               <a href="/" class="footer__link">
-                <svg class="logo" width="24" height="24">
+                <svg class="" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
                 <p>Facebook</p></a
@@ -746,7 +746,7 @@
             </li>
             <li class="footer__item">
               <a href="/" class="footer__link">
-                <svg class="logo" width="24" height="24">
+                <svg class="" width="24" height="24">
                   <use href="./images/icons.svg#icon-tiktok"></use>
                 </svg>
                 <p>Tik Tok</p></a
@@ -754,7 +754,7 @@
             </li>
             <li class="footer__item">
               <a href="/" class="footer__link">
-                <svg class="logo" width="24" height="24">
+                <svg class="" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
                 <p>Instagram</p></a
