--- a/index.html
+++ b/index.html
@@ -692,9 +692,11 @@
     <footer class="footer container">
       <div class="footer__wraper">
         <div class="footer__logo-box">
-          <svg class="" width="190" height="66">
-            <use href="./images/icons.svg#icon-footer-logo"></use>
-          </svg>
+          <a href="/">
+            <svg class="" width="190" height="66">
+              <use href="./images/icons.svg#icon-footer-logo"></use>
+            </svg>
+          </a>
           <p class="footer__logo-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
             dolor sit amet, consectetur adipiscing elit.
